# dosbox

./: .gitignore  config_gboxer_win64.h  configure.ac  configure.in
include/: dos_system.h  dosbox.h  setup.h  shell.h
patches/0_74-gboxer/: 0010-Apply-Ctrl-Break-patch.patch  0020-Apply-PhysFS-patch.patch  0030-Apply-Printer-patch.patch  0040-Apply-rest-of-Boxer-patches.patch  0050-Add-GBoxer-WIN32-patches.patch
src/: Makefile.am  dosbox.cpp
src/cpu/: callback.cpp
src/cpu/core_dyn_x86/: cache.h  decoder.h  risc_x86.h
src/dos/: cdrom.h  cdrom_aspi_win32.cpp  cdrom_image.cpp  cdrom_ioctl_win32.cpp  dos.cpp  dos_devices.cpp  dos_execute.cpp  dos_keyboard_layout.cpp  dos_mscdex.cpp  dos_programs.cpp  drive_cache.cpp  drive_fat.cpp  drive_iso.cpp  drive_local.cpp  drive_local_gboxer.cpp  drive_local_gboxer.h  drive_physfs.cpp  drive_virtual.cpp  drives.cpp  drives.h
src/fpu/: fpu_instructions_x86.h
src/gui/: render.cpp
src/hardware/: Makefile.am  hardware.cpp  joystick.cpp  keyboard.cpp  mixer.cpp  pic.cpp  vga_draw.cpp  vga_other.cpp  vga_xga.cpp
src/hardware/parport/: Makefile.am  printer_charmaps.cpp
src/hardware/serialport/: misc_util.cpp  nullmodem.cpp
src/ints/: bios.cpp  bios_disk.cpp  bios_keyboard.cpp  mouse.cpp
src/misc/: setup.cpp
src/shell/: shell.cpp  shell_batch.cpp  shell_cmds.cpp  shell_misc.cpp
