AM_CPPFLAGS = -I$(top_srcdir)/include

noinst_LIBRARIES = libparallel.a

libparallel_a_SOURCES =	directlpt_linux.cpp directlpt_linux.h \
						directlpt_win32.cpp directlpt_win32.h \
						filelpt.cpp filelpt.h \
						printer_charmaps.cpp printer_charmaps.h parport.cpp \
						printer_redir.cpp printer_redir.h printer_if.h \
						printer.cpp printer.h
